--- a/src/app/portada/portada.component.html
+++ b/src/app/portada/portada.component.html
@@ -1,5 +1,5 @@
 <div class="fondo">
-    <h3 class="titulo">BECAJAVA2020</h3>
-    <div class="imagen"></div>
-    <button class="boton" (click)="ingresar()">Ingresa</button>
+    <h1 class="titulo">BECAJAVA2020</h1>
+    <img class="imagen" src="/assets/Grupo 14.png" alt="título ingresa">
+    <a class="boton" routerLink="/bienvenida">Ingresa</a>
 </div>
