--- a/src/app/portada/portada.component.css
+++ b/src/app/portada/portada.component.css
@@ -4,7 +4,6 @@
     width: 1367px;
     height: 768px;
     background: #1B0088 0% 0% no-repeat padding-box;
-    opacity: 1;
 }
 
 .boton {
@@ -12,18 +11,14 @@
     top: 495px;
     left: 612px;
     width: 143px;
-    height: 37px;
+    padding: 5px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
-    border-radius: 5px;
-    opacity: 1;
-    margin-top: 53px;
-    cursor: pointer;
-
     text-align: center;
+    border-radius: 5px;
+    text-decoration: none;
+    cursor: pointer;
     font: normal normal normal 18px/26px Arial Black;
-    letter-spacing: 0px;
     color: #150567;
-    opacity: 1;
 }
 
 .titulo {
@@ -32,13 +27,8 @@
     left: 456px;
     width: 455px;
     height: 72px;
-
-    width: 455px;
-    height: 72px;
     font: normal normal bold 61px/74px Helvetica Neue;
-    letter-spacing: 0px;
     color: #FFFFFF;
-    opacity: 1;
 }
 
 .imagen {
@@ -47,7 +37,4 @@
     left: 638px;
     width: 91px;
     height: 91px;
-    background: transparent url('/assets/Grupo 14.png') 0% 0% no-repeat padding-box;
-    opacity: 1;
-    margin-top: 49px;
 }
