--- a/src/app/bienvenida/bienvenida.component.html
+++ b/src/app/bienvenida/bienvenida.component.html
@@ -1,11 +1,12 @@
-<app-navegacion class="area-navegacion"></app-navegacion>
-<div class="area-contenido">
-    <app-navbar class="area-navbar"></app-navbar>
-    <img class="imagen-bienvenido-temporal" src="/assets/bienvenido.png">
-    <!--
-        <h1 class="titulo">BIENVENIDO A TU PLATAFORMA</h1>
-        <div class="linea1"></div>
-        <h3 class="subtitulo">Por favor ingresa a la sección que deseas ></h3>
-        <div class="linea2"></div>
-    -->
+<app-menu-lateral class="area-menu-lateral"></app-menu-lateral>
+
+<div class="menu-superior-y-contenido-flex">
+    <app-menu-superior class="menu-superior"></app-menu-superior>
+    
+    <div class="contenedor-bienvenida-flex">
+        <h2 class="titulo">BIENVENIDO A TU PLATAFORMA</h2>
+        <div class="linea-superior"></div>
+        <p class="subtitulo">Por favor ingresa a la sección que deseas ></p>
+        <div class="linea-inferior"></div>
+    </div>
 </div>
