--- a/src/app/bienvenida/bienvenida.component.css
+++ b/src/app/bienvenida/bienvenida.component.css
@@ -1,29 +1,35 @@
-.area-navegacion {
-    width: 306px;
-    height: 768px;
-    background-color: rgb(123, 127, 133);
-    float: left;
-}
-
-.area-contenido {
-    width: 1366px;
-    height: 768px;
-    background-color: #ededed;
-}
-
-.area-navbar {
-    width: 100%;
-    height: 50px;
-    background-color:rgb(22, 21, 21);
-}
-
-.area-paginas {
-    display: block;
-    width: 100%;
-    height: 720px;
+.contenedor-bienvenida-flex {
+    display: flex;
+    flex-direction: column;
+    padding-left: 20%;
+    padding-top: 25%;
 }
 
 .imagen-bienvenido-temporal {
     margin-top: 245px;
     margin-left: 90px;
+}
+
+.titulo {
+    font: normal normal normal 22px/31px Arial Black;
+    color: #1B0088;
+}
+
+.subtitulo {
+    width: 664px;
+    font: normal normal normal 15px/31px Arial Black;
+    color: #ED1650;
+}
+
+.linea-superior {
+    width: 116px;
+    border-bottom: 8px solid #ED1650;
+    border-radius: 30px;
+}
+
+.linea-inferior {
+    border-bottom: 8px solid #1B0088;
+    border-bottom-width: 10px;
+    border-radius: 30px;
+    width: 345px;
 }
