--- a/src/app/reportes/reportes.component.css
+++ b/src/app/reportes/reportes.component.css
@@ -1,28 +1,3 @@
-.area-navegacion {
-    width: 306px;
-    height: 768px;
-    background-color: rgb(123, 127, 133);
-    float: left;
-}
-
-.area-contenido {
-    width: 1366px;
-    height: 768px;
-    background-color: #ededed;
-}
-
-.area-navbar {
-    width: 100%;
-    height: 50px;
-    background-color:rgb(22, 21, 21);
-}
-
-.area-paginas {
-    display: block;
-    width: 100%;
-    height: 720px;
-}
-
 .cabecera-reporte {
     width: 100%;
     height: 72px;
@@ -39,70 +14,67 @@
     float: left;
 }
 
-.label-reportes {
+.titulo-reportes {
     margin-top: 25px;
     top: 50%;
     text-align: left;
     font: normal normal normal 24px/28px Arial;
-    letter-spacing: 0px;
     color: #000000;
-    opacity: 1;
     float: left;
 }
 
+.contenedor-categoria-y-detalle-flex {
+    display: flex;
+    flex-direction: row;
+}
 .contenedor-categorias {
     width: 237px;
     height: 603px;
     margin: 15px;
-    float: left;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 2px 6px #00000059;
-    opacity: 1;
-}
-
-.contenedor-categoria-detalle {
-    width: 776px;
-    height: 603px;
-    margin-top: 15px;
-    float: left;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    box-shadow: 0px 2px 6px #00000059;
-    opacity: 1;
-    line-height: 603px;
-    text-align: center;
 }
 
 .titulo-categoria {
     text-align: left;
     font: normal normal normal 22px/31px Arial Black;
-    letter-spacing: 0px;
     color: #1B0088;
-    opacity: 1;
     margin-left: 24px;
     margin-top: 15px;
 }
 
-.titulo-categoria-detalle {
-    font: normal normal normal 23px/27px Arial;
-    letter-spacing: 0px;
-    color: #1D0088;
-    opacity: 1;
-    line-height: 1.5;
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.contenedor-listado-categorias {
+.menu-categorias-flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     width: auto;
-    height: 537px;
+    height: 490px;
     padding: 22px;
     margin: 11px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
+    font: normal normal normal 11px Arial;
     border: 1px solid #BFBFBF;
-    opacity: 1;
 }
 
-.icono {
-    margin: 7px;
+.menu-item {
+    padding: 12px;
     cursor: pointer;
+}
+
+.contenedor-detalle {
+    width: 776px;
+    height: 603px;
+    margin-top: 15px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 2px 6px #00000059;
+    line-height: 603px;
+    text-align: center;
+}
+
+.titulo-categoria-detalle {
+    font: normal normal normal 23px/27px Arial;
+    color: #1D0088;
+    line-height: 1.5;
+    display: inline-block;
+    vertical-align: middle;
 }
