--- a/src/app/reportes/reportes.component.css
+++ b/src/app/reportes/reportes.component.css
@@ -39,8 +39,8 @@
     text-align: left;
     font: normal normal normal 22px/31px Arial Black;
     color: #1B0088;
-    margin-left: 24px;
-    margin-top: 15px;
+    padding-left: 24px;
+    padding-top: 15px;
 }
 
 .menu-categorias-flex {
@@ -49,7 +49,7 @@
     justify-content: space-between;
     width: auto;
     height: 490px;
-    padding: 22px;
+    padding: 25px;
     margin: 11px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     font: normal normal normal 11px Arial;
@@ -61,20 +61,55 @@
     cursor: pointer;
 }
 
-.contenedor-detalle {
+.contenedor-detalle-flex {
+    display: flex;
+    flex-direction: column;
     width: 776px;
     height: 603px;
     margin-top: 15px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 2px 6px #00000059;
-    line-height: 603px;
-    text-align: center;
 }
 
 .titulo-categoria-detalle {
-    font: normal normal normal 23px/27px Arial;
-    color: #1D0088;
-    line-height: 1.5;
-    display: inline-block;
-    vertical-align: middle;
+    text-align: left;
+    font: normal normal normal 22px/31px Arial Black;
+    color: #1B0088;
+    padding-left: 24px;
+    padding-top: 15px;
+}
+
+.contenedor-tipo-reporte-flex {
+    display: flex;
+}
+
+label {
+    display: none;
+}
+
+.contenedor-informacion-requerida-flex {
+    display: flex;
+    flex-direction: column;
+    width: 695px;
+    margin: 0 auto;
+    padding: 15px;
+    border: 1px solid #BFBFBF;
+}
+
+.titulo-informacion-requerida {
+    font: normal normal normal 18px/26px Arial Black;
+    color: #0AAFA9;
+}
+
+.contenedor-form-info-requerida-flex {
+    display: flex;
+    flex-direction: column;
+}
+
+.seleccion-archivo {
+    display: block;
+}
+
+input[type="file"] {
+    display: none;
 }
