--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-body {
-    margin: 0px;
-}
-
-h1, h2, h3, p {
+* {
     margin: 0;
+    padding: 0;
+    margin: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
 }
 
 a {
@@ -14,8 +16,6 @@ a {
 
 ul {
     list-style-type: none;
-    padding: 0;
-    margin: 0;
 }
 
 li {
