--- a/src/app/menu-superior/menu-superior.component.html
+++ b/src/app/menu-superior/menu-superior.component.html
@@ -2,7 +2,7 @@
     <img class="imagen-hamburguesa" src="/assets/btn-menu.png">
 
     <div class="contenedor-configuracion-flex">
-        <img class="imagen-configuracion" src="/assets/setting.png" alt="configuración del lenguaje">
+        <img class="imagen-configuracion" src="/assets/icono-configuracion.png" alt="configuración del lenguaje">
         <p class="lenguaje">ES</p>
     </div>
 </div>
