--- a/src/app/portada/portada.component.css
+++ b/src/app/portada/portada.component.css
@@ -1,17 +1,17 @@
 .fondo  {
-    top: 0px;
-    left: 0px;
-    width: 1367px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     height: 768px;
     background: #1B0088 0% 0% no-repeat padding-box;
 }
 
 .boton {
-    position: absolute;
-    top: 495px;
-    left: 612px;
     width: 143px;
     padding: 5px;
+    margin-top: 50px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     text-align: center;
     border-radius: 5px;
@@ -22,9 +22,6 @@
 }
 
 .titulo {
-    position: absolute;
-    top: 235px;
-    left: 456px;
     width: 455px;
     height: 72px;
     font: normal normal bold 61px/74px Helvetica Neue;
@@ -32,9 +29,6 @@
 }
 
 .imagen {
-    position: absolute;
-    top: 356px;
-    left: 638px;
     width: 91px;
     height: 91px;
 }
